--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "/perla-d-occidente/",
             "outputPath": "dist/perla-d-occidente",
             "index": "src/index.html",
             "browser": "src/main.ts",
