--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:production": "ng build --configuration production --base-href '/perla-d-occidente/'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:perla-d-occidente": "node dist/perla-d-occidente/server/server.mjs"
